Barebones vue app
Bug: T307053
Change-Id: Iad8fb781f32c24783e2c7526be4c21b462683fe1

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,9 +1,8 @@
 {
 	"@metadata": {
 		"authors": [
-			"Your Name"
+			"Joseph Seddon"
 		]
 	},
-	"searchvue-desc": "{{desc|name=SearchVue|url=https://www.mediawiki.org/wiki/Extension:SearchVue}}",
-	"searchvue-extensionname": "{{name}}"
+	"searchvue-desc": "{{desc|name=SearchVue|url=https://www.mediawiki.org/wiki/Extension:SearchVue}}"
 }
