--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,6 +4,5 @@
 			"Joseph Seddon"
 		]
 	},
-	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
-	"searchvue-extensionname": "SearchVue"
+	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search"
 }
