Navigate between articles in QuickView on mobile
- [x] Design navbar
- [x] Add functionality to navigate
- [x] Export results Title and snippets

Bug: T313771
Change-Id: I4a43c5e09db29410e951c968de379f3b5ef2d6f0

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,5 +4,8 @@
 			"Joseph Seddon"
 		]
 	},
-	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search"
+	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
+	"quickview-close": "Close",
+	"quickview-next": "Next",
+	"quickview-previous": "previous"
 }
