--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,6 +8,7 @@
 	"quickview-close": "Close",
 	"quickview-next": "Next",
 	"quickview-previous": "previous",
+	"quickview-snippet-gotofullarticle": "Go to full article",
 	"searchpreview-label": "Enable search result preview",
 	"searchpreview-help": "Preview the contents of the article and related pages."
 }
