Quick View: Add search results snippet to QuickView panel
- [x] Update I18n to align with existing Wiki

Bug: T311644
Change-Id: I84c8d6e4c774620364be055c52ca23ebee2adfd9

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,7 +8,7 @@
 	"quickview-close": "Close",
 	"quickview-next": "Next",
 	"quickview-previous": "previous",
-	"quickview-snippet-gotofullarticle": "Go to full article",
+	"quickview-snippet-gotofullpage": "Go to full page",
 	"searchpreview-label": "Enable search result preview",
-	"searchpreview-help": "Preview the contents of the article and related pages."
+	"searchpreview-help": "Preview the contents of the page and related pages."
 }
