Provide a quick view turn on/off preference setting.
- [x] Add Toggle on Config
- [x] Add default Value
- [x] Add Internationalisation strings

Bug: T311667
Change-Id: Ib7f7e9c275658d344acd16a1265dcb26c01de193

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,7 @@
 	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
 	"quickview-close": "Close",
 	"quickview-next": "Next",
-	"quickview-previous": "previous"
+	"quickview-previous": "previous",
+	"searchpreview-label": "Enable search result preview",
+	"searchpreview-help": "Preview the contents of the article and related pages."
 }
