Tweak to i18n message for SearchVue
Bug: T310246
Change-Id: Ibf1894701cbc0e2d28663a560aee91043e496be8

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,7 +7,7 @@
 	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
 	"quickview-close": "Close",
 	"quickview-next": "Next",
-	"quickview-previous": "previous",
+	"quickview-previous": "Previous",
 	"quickview-snippet-gotofullpage": "Go to full page",
 	"searchpreview-label": "Enable search result preview",
 	"searchpreview-help": "Preview the contents of the page and related pages."
