Changed hardcoded text to I18n text string in the QuickViewSections.vue file
Bug: T317765
Depends-On: I8fc042ef2afd6f30a298ed88b4037ca7087800d3
Change-Id: I2d4d3f55f0a09e8206bb9bd964bdf829799f00ba

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,5 +13,7 @@
 	"searchvue-help": "Preview the contents of the page and related pages.",
 	"searchvue-commons-viewmore": "View more",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
-	"searchvue-commons-heading": "Related images"
+	"searchvue-commons-heading": "Related images",
+	"searchvue-article-sections-heading": "Sections in the article",
+	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}"
 }
