--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -14,5 +14,7 @@
 	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature.",
 	"searchvue-commons-viewmore": "Link to see more results for commons images for the selected page",
 	"searchvue-commons-footnote": "Credits message to inform the user that the content displayed comes from Commons",
-	"searchvue-commons-heading": "Heading of the Commons images shown for the selected page"
+	"searchvue-commons-heading": "Heading of the Commons images shown for the selected page",
+	"searchvue-article-sections-heading": "Text that represent article sections heading",
+	"searchvue-more-sections": "Text indicating the remaining amount of sections. Parameters:\n* $1 - The number of remaining sections"
 }
