--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,10 +5,10 @@
 		]
 	},
 	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
-	"quickview-close": "Close",
-	"quickview-next": "Next",
-	"quickview-previous": "Previous",
-	"quickview-snippet-gotofullpage": "Go to full page",
-	"searchpreview-label": "Enable search result preview",
-	"searchpreview-help": "Preview the contents of the page and related pages."
+	"searchvue-close": "Close",
+	"searchvue-next": "Next",
+	"searchvue-previous": "Previous",
+	"searchvue-snippet-gotofullpage": "Go to full page",
+	"searchvue-label": "Enable search result preview",
+	"searchvue-help": "Preview the contents of the page and related pages."
 }
