--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,5 +10,8 @@
 	"searchvue-previous": "Previous",
 	"searchvue-snippet-gotofullpage": "Go to full page",
 	"searchvue-label": "Enable search result preview",
-	"searchvue-help": "Preview the contents of the page and related pages."
+	"searchvue-help": "Preview the contents of the page and related pages.",
+	"searchvue-commons-viewmore": "View more",
+	"searchvue-commons-footnote": "In Wikimedia Commons",
+	"searchvue-commons-heading": "Related images"
 }
