--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -10,5 +10,8 @@
 	"searchvue-previous": "Title of the svg used to move to the previous result",
 	"searchvue-snippet-gotofullpage": "Button shown at the bottom of the result snippet to navigate to the full page",
 	"searchvue-label": "Used in [[Special:Preferences]], tab \"Search\". Offer the user the ability to enable or disable the search preview feature.",
-	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature."
+	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature.",
+	"searchvue-commons-viewmore": "Link to see more results for commons images for the selected page",
+	"searchvue-commons-footnote": "Credits message to inform the user that the content displayed comes from Commons",
+	"searchvue-commons-heading": "Heading of the Commons images shown for the selected page"
 }
