SearchVue: Update verbiage for 'search preview' config
Implement conditional messages for main and other namespaces related to text
in QuickViewSnippet template

Bug: T317950
Change-Id: I41c36d5249dc25e1f953268708a54b356a70b0df

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,12 +8,13 @@
 	"searchvue-close": "Close",
 	"searchvue-next": "Next",
 	"searchvue-previous": "Previous",
-	"searchvue-snippet-gotofullpage": "Go to full page",
 	"searchvue-label": "Enable search result preview",
-	"searchvue-help": "Preview the contents of the page and related pages.",
+	"searchvue-snippet-gotofullpage": "Go to full page",
+	"searchvue-snippet-gotofullpage-ns0": "Go to full article",
 	"searchvue-commons-viewmore": "View more",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
 	"searchvue-commons-heading": "Related images",
 	"searchvue-article-sections-heading": "Sections in the article",
-	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}"
+	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
+	"searchvue-help": "Preview the contents of the page and related pages."
 }
