--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -10,6 +10,7 @@
 	"searchvue-next": "Title of the svg used to move to the next result",
 	"searchvue-previous": "Title of the svg used to move to the previous result\n{{identical|Previous}}",
 	"searchvue-snippet-gotofullpage": "Button shown at the bottom of the result snippet to navigate to the full page",
+	"searchvue-snippet-gotofullpage-ns0": "Button shown at the bottom of the result snippet to navigate to the full article if it belongs to the Main namespace",
 	"searchvue-label": "Used in [[Special:Preferences]], tab \"Search\". Offer the user the ability to enable or disable the search preview feature.",
 	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature.",
 	"searchvue-commons-viewmore": "Link to see more results for commons images for the selected page",
