--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -18,5 +18,10 @@
 	"searchvue-article-sections-heading": "Text that represent page sections heading",
 	"searchvue-article-sections-heading-ns0": "Text that represent article sections heading if it belongs to the Main namespace",
 	"searchvue-more-sections": "Text indicating the remaining amount of sections. Parameters:\n* $1 - The number of remaining sections",
-	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature."
+	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature.",
+	"tutorial-popup-title": "Heading of the tutorial popup",
+	"tutorial-popup-text1": "First paragraph in the tutorial popup",
+	"tutorial-popup-text2": "Second paragraph in the tutorial popup",
+	"tutorial-popup-close": "Title for the svg used to close tutorial popup",
+	"tutorial-popup-preferences": "Text that represent preferences"
 }
