Update config subheading
- [x] Update wording to "Preview the contents of the page and related content."

Bug: T311667
Change-Id: I819191f72b5eabe52cd3f733352c16cab60513dc

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -16,5 +16,5 @@
 	"searchvue-commons-heading": "Related images",
 	"searchvue-article-sections-heading": "Sections in the article",
 	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
-	"searchvue-help": "Preview the contents of the page and related pages."
+	"searchvue-help": "Preview the contents of the page and related content."
 }
