--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,7 +14,8 @@
 	"searchvue-commons-viewmore": "View more",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
 	"searchvue-commons-heading": "Related images",
-	"searchvue-article-sections-heading": "Sections in the article",
+	"searchvue-article-sections-heading": "Sections in the page",
+	"searchvue-article-sections-heading-ns0": "Sections in the article",
 	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
 	"searchvue-help": "Preview the contents of the page and related content."
 }
