--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -15,7 +15,8 @@
 	"searchvue-commons-viewmore": "Link to see more results for commons images for the selected page",
 	"searchvue-commons-footnote": "Credits message to inform the user that the content displayed comes from Commons",
 	"searchvue-commons-heading": "Heading of the Commons images shown for the selected page",
-	"searchvue-article-sections-heading": "Text that represent article sections heading",
+	"searchvue-article-sections-heading": "Text that represent page sections heading",
+	"searchvue-article-sections-heading-ns0": "Text that represent article sections heading if it belongs to the Main namespace",
 	"searchvue-more-sections": "Text indicating the remaining amount of sections. Parameters:\n* $1 - The number of remaining sections",
 	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature."
 }
