--- a/i18n/en.json
+++ b/i18n/en.json
@@ -19,7 +19,7 @@
 	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
 	"searchvue-help": "Preview the contents of the page and related content.",
 	"tutorial-popup-title": "Search result previews",
-	"tutorial-popup-text1": "Click on the the article snippet to preview the search result and see related content.",
+	"tutorial-popup-text1": "Click on the the article snippet to preview the search result and view related content.",
 	"tutorial-popup-text2": "You can turn previews on and off in the search",
 	"tutorial-popup-preferences": "preferences",
 	"tutorial-popup-close": "Close"
