Mobile: Tutorial/message to introduce quick view.
[x] Show the onboarding pop up when the logged in user first sees the results on the special search page.
[x] The onboarding pop up should point at the snippet of the first result.
[x] Show the icon, title and text as shown in the pop up in the mocks.
[x] Have the blue icon pulsate. This is a standard component in design system.
[x] Cross icon on the pop up should close the pop up
[x] Automatically close the pop up when the user clicks on a snippet (any snippet on the page). Also open the preview when the snippet is clicked.
[x] Do not show the onboarding pop up again to the same logged in user.
[x] Logged out users will not see this pop up. (Search previews are enabled by default.)
[x] If the user clicks on any link on the page that takes them to a new page consider the onboarding pop up as seen and hide it next time or if they go back.
[x] Clicking on snippet or performing a new search will hide the pop up and do not show it again.
[x] The code should be simple to remove in the future (e.g. we do not want classes and code scattered everywhere, but in a nice folder with all the info in it)

Bug: T321951
Change-Id: I4658b6e9b98de4c443ddade320c6b80d696ff371

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -21,6 +21,7 @@
 	"tutorial-popup-title": "Search result previews",
 	"tutorial-popup-text1": "Click on the the article snippet to preview the search result and view related content.",
 	"tutorial-popup-text2": "You can turn previews on and off in the search",
+	"tutorial-popup-text-mobile": "Tap on the the article snippet or the arrow to preview the search result and see related content.",
 	"tutorial-popup-preferences": "preferences",
 	"tutorial-popup-close": "Close"
 }
