--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -22,6 +22,7 @@
 	"tutorial-popup-title": "Heading of the tutorial popup",
 	"tutorial-popup-text1": "First paragraph in the tutorial popup",
 	"tutorial-popup-text2": "Second paragraph in the tutorial popup",
+	"tutorial-popup-text-mobile": "Tutorial popup text for mobile devices",
 	"tutorial-popup-preferences": "Text that represent preferences",
 	"tutorial-popup-close": "Title for the svg used to close tutorial popup\n{{identical|Close}}"
 }
