--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,8 +12,10 @@
 	"searchvue-snippet-gotofullpage": "Go to full page",
 	"searchvue-snippet-gotofullpage-ns0": "Go to full article",
 	"searchvue-commons-viewmore": "View more",
+	"searchvue-commons-viewmore-mobile": "View more images",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
 	"searchvue-commons-heading": "Related images",
+	"searchvue-commons-heading-mobile": "Related images in Wikimedia Commons",
 	"searchvue-article-sections-heading": "Sections in the page",
 	"searchvue-article-sections-heading-ns0": "Sections in the article",
 	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
