--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,6 +11,7 @@
 	"searchvue-label": "Enable search result preview",
 	"searchvue-snippet-gotofullpage": "Go to full page",
 	"searchvue-snippet-gotofullpage-ns0": "Go to full article",
+	"searchvue-description-mobile": "$1 is a $2",
 	"searchvue-commons-viewmore": "View more",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
 	"searchvue-commons-heading": "Related images",
