--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -12,6 +12,7 @@
 	"searchvue-label": "Used in [[Special:Preferences]], tab \"Search\". Offer the user the ability to enable or disable the search preview feature.",
 	"searchvue-snippet-gotofullpage": "Button shown at the bottom of the result snippet to navigate to the full page",
 	"searchvue-snippet-gotofullpage-ns0": "Button shown at the bottom of the result snippet to navigate to the full article if it belongs to the Main namespace",
+	"searchvue-description-mobile": "Description paragraph for the search preview.\n* $1 - Page title\n* $2 - Page description",
 	"searchvue-commons-viewmore": "Link to see more results for commons images for the selected page",
 	"searchvue-commons-footnote": "Credits message to inform the user that the content displayed comes from Commons",
 	"searchvue-commons-heading": "Heading of the Commons images shown for the selected page",
