Mobile: Loading indicator for search preview
- [x] Refactor App.vue by split it in two Desktop and Mobile
- [x] Add loading requirement on mobile
- [x] Create a new flag (componentReady) and repurpose Visible (due to the way mobile works this was needed)
- [x] Create loading spinner directory to re-use existing functionality within Wikimedia
- [x] Change QuickView to expose a slot to change loading indicator

Bug: T321944
Change-Id: I6b4bbe878dca0342172304a225fcb87cc333ac85

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,6 +9,8 @@
 	"searchvue-next": "Next",
 	"searchvue-previous": "Previous",
 	"searchvue-label": "Enable search result preview",
+	"searchvue-loading": "Loading preview",
+	"searchvue-no-content": "No content to preview",
 	"searchvue-snippet-gotofullpage": "Go to full page",
 	"searchvue-snippet-gotofullpage-ns0": "Go to full article",
 	"searchvue-description-mobile": "$1 is a $2",
