--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -10,6 +10,8 @@
 	"searchvue-next": "Title of the svg used to move to the next result",
 	"searchvue-previous": "Title of the svg used to move to the previous result\n{{identical|Previous}}",
 	"searchvue-label": "Used in [[Special:Preferences]], tab \"Search\". Offer the user the ability to enable or disable the search preview feature.",
+	"searchvue-loading": "Loading messages shown while the search preview loads on mobile devices.",
+	"searchvue-no-content": "Used on mobile view to inform the user that there is not enought content to show the search preview.",
 	"searchvue-snippet-gotofullpage": "Button shown at the bottom of the result snippet to navigate to the full page",
 	"searchvue-snippet-gotofullpage-ns0": "Button shown at the bottom of the result snippet to navigate to the full article if it belongs to the Main namespace",
 	"searchvue-description-mobile": "Description paragraph for the search preview.\n* $1 - Page title\n* $2 - Page description",
