FIx SearchVue commons widget wording
- [x] Fix typo in the Wiki Commons panel in search vue

Bug: T321001
Change-Id: Ibacb9cac080ba56c66d34aea53c3c1b167e4be2d

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -16,7 +16,7 @@
 	"searchvue-commons-viewmore-mobile": "View more images",
 	"searchvue-commons-footnote": "In Wikimedia Commons",
 	"searchvue-commons-heading": "Related images",
-	"searchvue-commons-heading-mobile": "Related images in Wikimedia Commons",
+	"searchvue-commons-heading-mobile": "Related images from Wikimedia Commons",
 	"searchvue-article-sections-heading": "Sections in the page",
 	"searchvue-article-sections-heading-ns0": "Sections in the article",
 	"searchvue-more-sections": "+ $1 more {{PLURAL:$1|section|sections}}",
