Enhance search Preview keyboard navigation
- [x] Add aria label to arrow on search result
- [x] Enable Search Preview to be closed with ESC
- [x] Autofocus Dialog and add required aria information

Bug: T326641
Change-Id: I362b8dbd697b99c7e175ae0932bb7fb0e1c1bece

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,6 +4,9 @@
 			"Joseph Seddon"
 		]
 	},
+	"searchvue-aria-button": "Open the preview of this article.",
+	"searchvue-dialog-title": "Search Preview",
+	"searchvue-dialog-aria-label": "Preview dialog is now open. It shows key information on this article and related content.",
 	"searchvue-desc": "Vue.js feature additions and improvements to Special:Search",
 	"searchvue-close": "Close",
 	"searchvue-next": "Next",
