--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -28,6 +28,8 @@
 	"searchvue-more-sections": "Text indicating the remaining amount of sections. Parameters:\n* $1 - The number of remaining sections",
 	"searchvue-help": "Help text for user preference that offer the user the ability to enable or disable the search preview feature.",
 	"searchvue-links-subheading": "A link in the search results sidebar. Points to a possibly relevant page in another wiki in the family. For example, in Wikipedia, this may say \"In Wikivoyage\", \"In Wikisource\", etc. Parameters:\n* $1 - Name of the other wiki site",
+	"searchvue-links-heading": "Text that represent interwiki links heading",
+	"searchvue-links-showmore": "Button text used to toggle between interwiki links on mobile view.",
 	"tutorial-popup-title": "Heading of the tutorial popup",
 	"tutorial-popup-text1": "First paragraph in the tutorial popup",
 	"tutorial-popup-text2": "Second paragraph in the tutorial popup",
