--- a/i18n/en.json
+++ b/i18n/en.json
@@ -29,7 +29,7 @@
 	"searchvue-links-heading": "Related pages in other projects",
 	"searchvue-links-showmore": "view other pages",
 	"tutorial-popup-title": "Search result previews",
-	"tutorial-popup-text1": "Click on the the article snippet to preview the search result and view related content.",
+	"tutorial-popup-text1": "Click on the article snippet to preview the search result and view related content.",
 	"tutorial-popup-text2": "You can turn previews on and off in the [[Special:Preferences#mw-prefsection-searchoptions|search preferences]].",
 	"tutorial-popup-text-mobile": "Tap on the the article snippet or the arrow to preview the search result and see related content.",
 	"tutorial-popup-close": "Close"
